docs(iceberg): rewrite integration doc with edge cases and test findings